2024-01-22  Steven Eker  <eker@pup>

	* IO_Manager.hh (class IO_Manager): increase MAX_LINE_LENGTH from
	1024 to 100 * 1024; increase MAX_HISTORY_LENGTH from 4096 to
	100 * 1024

2024-01-19  Steven Eker  <eker@pup>

	* directoryManager.hh (class DirectoryManager): added decl for
	2 argument checkAccess()

	* directoryManager.cc (DirectoryManager::checkAccess): added 2
	argument version that checks we have a regular file
	(DirectoryManager::checkAccess): call 2 argument checkAccess()

===================================Maude156===========================================

2023-04-12  Steven Eker  <eker@pup>

	* autoWrapBuffer.hh (class AutoWrapBuffer): Bool -> bool

===================================Maude145===========================================

2021-04-02  Steven Eker  <eker2@eker10>

	* IO_Manager.hh (IO_Manager::safeToAccessStdin)
	(IO_Manager::safeToAccessStdout, IO_Manager::safeToAccessStderr):
	added

2021-03-30  Steven Eker  <eker2@eker10>

	* autoWrapBuffer.cc (AutoWrapBuffer::sync): use decideOnBreak() to
	implement flush

	* IO_Manager.cc (IO_Manager::readFromStdin): don't call
	resetCursorPosition() after all since we could be in a child
	process

	* IO_Manager.hh (IO_Manager::resetStdoutWrapping): added

	* autoWrapBuffer.cc (AutoWrapBuffer::sync): set pendingWidth to
	UNDEFINED after we dumpBuffer()

	* IO_Manager.cc (IO_Manager::readFromStdin): call
	resetCursorPosition() to account for user typed \n

	* autoWrapBuffer.hh (AutoWrapBuffer::resetCursorPosition): added

	* IO_Manager.cc (IO_Manager::setAutoWrap): pass respectFlush as
	true for cout and false for cerr
	(IO_Manager::readFromStdin): use cout rather than fputc()
	(IO_Manager::getInput): use cout rather than fputs()
	(IO_Manager::getLineFromStdin): use cout rather than fputs()

	* autoWrapBuffer.hh (class AutoWrapBuffer): updated decl for ctor;
	added data member respectFlush

	* autoWrapBuffer.cc (AutoWrapBuffer::sync): removed support for